--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2342,7 +2342,7 @@ input, select, textarea {
 /* Image */
 
 	.image {
-		border-radius: 8px;
+		border-radius: 100%;
 		border: 0;
 		display: inline-block;
 		position: relative;
@@ -2986,7 +2986,7 @@ input, select, textarea {
 
 			.spotlight .image img {
 				display: block;
-				border-radius: 100%;
+				/* border-radius: 100%; */
 				width: 16em;
 			}
 
@@ -3101,7 +3101,7 @@ input, select, textarea {
 					display: block;
 					margin: 0 auto;
 					max-width: 75%;
-					border-radius: 50%;
+					border-radius: 100%;
 					height: 125px;
 				}
 
@@ -3558,7 +3558,7 @@ input, select, textarea {
 		}
 
 		#main .spotlight .image {
-			border-color: #dddddd;
+			/* border-color: #dddddd; */
 		}
 
 		#main > .main {
