add media query to fix form

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1311,6 +1311,10 @@ input, select, textarea {
 
 		@media screen and (max-width: 736px) {
 
+			.form-container {
+				flex-direction: column;
+			}
+
 			.row {
 				display: flex;
 				flex-wrap: wrap;
@@ -2666,6 +2670,7 @@ input, select, textarea {
 			}
 
 			header.major p {
+				margin: auto;
 				font-size: 1em;
 				letter-spacing: 0;
 			}
